ckad/ingr3ss/lab9-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: lab9-ingress
spec:
  rules:
  - host: lab9.example.com
    http:
      paths:
      - backend:
          service:
            name: lab9
            port:
              number: 80
        path: /nginx/
        pathType: Prefix
status:
  loadBalancer: {}
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: lab9-ingress
spec:
  rules:
  - host: lab9.com
    http:
      paths:
      - backend:
          service:
            name: lab9
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
