ckad/ingr3ss/testingingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: testingingressvc-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: testingingress
            port:
              number: 80
        path: /
        pathType: Exact
      - backend:
          service:
            name: newdep
            port:
              number: 8080
        path: /hello
        pathType: Exact
status:
  loadBalancer: {}
